--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,7 @@
 .Header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
   border-bottom: solid var(--grey) 1px;
   background-color: var(--grey-dark);
   font-size: 2rem;
