--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -4,4 +4,5 @@
   inset: 0;
   display: grid;
   place-items: center;
+  z-index: 10;
 }
